client/src/pages/ProfilePage/ProfilePage.scss
// Import partials
@use "../../styles/partials/colors" as *;
@use "../../styles/partials/fonts" as *;
@use "../../styles/partials/mixins" as *;
@use "../../styles/global.scss" as *;

.profile {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: linear-gradient(to bottom, $neutral-white, #EEF4FC, #BBD9FF, #BBD9FF, #EEF4FC, $neutral-white);
  animation: moveBackground 15s linear infinite;

  @keyframes moveBackground {
    0% {
      background-position: 0% 0%;
    }
    50% {
      background-position: 100% 100%;
    }
    100% {
      background-position: 0% 0%;
    }
  }

  &__text-wrapper {
    border-radius: 0.5rem 0.5rem 0 0;
    border: 1px solid $primary-pale-blue;
    box-shadow: $shadow-senary;
    width: 11rem;
  }

  &__btn-save-account-wrapper {
    @include block-item(9.625rem, 3.375rem);
    bottom: .5rem;
    transform: translateX(1%);
    margin-bottom: 1.5rem;

    @include tablet {
      bottom: 21.5rem;
    }

    @include desktop {
      bottom: -1.5rem;
    }
  
    &:hover .profile__btn-save-account {
      background: linear-gradient(180deg, rgb(238, 244, 252) 0%, rgb(64, 146, 255) 100%);
      animation: shimmer 0.5s linear infinite;
    }

    &:active {
      transform: scale(0.95);
    }
  }
  
  &__btn-save-account-bg {
    @include block-item(9.625rem, 3.1875rem);
    background: linear-gradient(180deg, rgb(238, 244, 252) 0%, rgb(64, 146, 255) 100%);
    border-radius: .75rem;
    box-shadow: $shadow-quinary;
    position: absolute;
    top: .1875rem;
  }
  
  &__btn-save-account {
    @include block-item(9.25rem, 2.875rem);
    align-items: center;
    background-color: $neutral-white;
    border: 2px solid $primary-very-light-blue;
    border-radius: .75rem;
    box-shadow: $shadow-quinary;
    display: flex;
    justify-content: center;
    padding: .75rem 2rem;
    position: absolute;
    transition: background 0.3s ease;
    cursor: pointer;

    &:hover .profile__btn-save-account-txt {
      color: $primary-darker-blue;
    }
    
    &:active {
      transform: scale(0.95);
    }
  }
  
  &__btn-save-account-txt {
    font-family: $primary-font;
    font-size: 1rem;
    letter-spacing: -0.05rem;
    position: relative;
    white-space: nowrap;
    cursor: pointer;

    &:hover {
      color: $primary-darker-blue;
    }

    &:focus,
    &:active {
      color: $primary-darker-blue;
    }

    &:visited {
      color: $primary-darker-blue;
    }
  }

 &__btn-save-account-container:visited {
    color: $primary-darker-blue;
  }
  
  @keyframes shimmer {
    0% {
      background-position: -200% 0;
    }
    100% {
      background-position: 200% 0;
    }
  }

  &__select-your-region {
    display: flex;
    align-items: center;
    flex-direction: column;
  }

  &__region-heading {
    display: flex;
    flex-direction: row;
  }

  &__hero {
    background: $primary-darker-blue-gradient;
    width: 100%;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__main {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: $primary-pale-blue;
    width: 100%; 
    border: 1px solid $neutral-white;
    border-radius: 1rem;
    box-shadow: $shadow-senary;
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;

    @include tablet {
      width: 30rem;
    }

    @include desktop {
      width: 40rem; 
    }
  }

  &__card {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1.5rem;
  }

  &__title {
    color: $primary-dark-blue;
    font-family: $primary-font;
    font-size: 1.5rem; 
    font-weight: 400;
    margin-top: 1rem;
    margin-bottom: 1rem;

    @include tablet {
      font-size: 1.75rem; 
    }

    @include desktop {
      font-size: 1.75rem; 
    }
  }

  &__notifications-content {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: .75rem;
  }

  &__container {
    width: 11rem;
  }

  &__notification-item {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    flex-direction: row;
  }

  &__content-subscription-container {
    flex-direction: column;
    padding: 1rem;
    width: 100%;
    background-color: $neutral-white;
    border: 0.125rem solid $primary-very-light-blue;
    box-shadow: $shadow-quinary;
    border-radius: 0.75rem;
  }

  &__content-details,
  &__content-region,
  &__content-notifications,
  &__content-password {
    background-color: $neutral-white;
    border: 0.125rem solid $primary-very-light-blue;
    border-radius: 0.75rem;
    box-shadow: $shadow-quinary;
    padding: 1rem;
    width: 100%;
    max-width: 25rem;

    @include tablet {
      max-width: 30rem; 
    }

    @include desktop {
      width: 30rem;
    }
  }

  &__details-header,
  &__password-header,
  &__subscription-header,
  &__notifications-header,
  &__region-header {
    background-color: $primary-darker-blue;
    border: 2px solid $primary-pale-blue;
    box-shadow: $shadow-primary;
    text-align: center;
    border-radius: 0.5rem 0.5rem 0 0;
    width: 11rem; 

    @include tablet {
      font-size: 1.25rem; 
    }

    @include desktop {
      font-size: 1.25rem; 
    }
  }

  &__text-wrapper {
    background-color: $primary-darker-blue;
    color: $primary-very-light-blue;
    font-family: $primary-font;
    font-size: 1rem;

    @include tablet {
      font-size: 1.1rem; 
    }

    @include desktop {
      font-size: 1.125rem;
    }
  }

  &__details-content,
  &__password-content,
  &__notifications-content,
  &__subscription-status-wrapper,
  &__region-content {
    align-items: center;
    background-color: $primary-very-light-blue;
    border: 0.1875rem solid $primary-pale-blue;
    border-radius: 0 .5rem 0.5rem 0.5rem;
    box-shadow: $shadow-primary;
    display: flex;
    justify-content: center;
    flex-direction: column;
    line-height: 1.25rem;
    color: $primary-medium-blue;
    padding: 1rem;
    width: 100%;
  }

  &__location-icon {
    @include block-item(1.5rem, 1.5rem);
    margin-right: 0.25rem;
    margin-top: -.15rem;
  }

  &__input-group {
    position: relative;
    width: 100%;
  }

  &__input {
    font: $primary-font;
    width: 100%;
    padding: 1rem;
    border: 2px solid $primary-light-blue;
    border-radius: 0.5rem;
    font-size: 1rem;
    box-shadow: $shadow-senary;
    background: $neutral-white;
    margin-bottom: 1rem;
    color: $neutral-black;
    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;

    &:focus,
    &:not(:placeholder-shown) {
      background-color: $primary-very-light-blue;
      color: $primary-medium-blue;
      border-color: $primary-medium-blue;
      font-family: $primary-font;
      padding-left: .85rem;
      font-size: 1rem;

      & + .profile__label {
        top: -0.85rem;
        font-size: 1rem;
        font: $secondary-font;
        background-color: $primary-medium-blue;
        border: 1px solid $primary-light-blue;
        color: $neutral-white;
      }

      &::placeholder {
        color: $primary-light-blue;
        font-size: 1rem;
      }
    }

    &:not(:focus):placeholder-shown {
      &::placeholder {
        color: transparent;
      }
    }

    @include tablet {
      font-size: 1.125rem;
    }

    @include desktop {
      font-size: 1.125rem; 
    }
  }

  &__dropdown {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    font-family: $primary-font;
    font-size: 1rem;
    width: 100%; 
    background: $neutral-white;
    border: 2px solid $primary-light-blue;
    border-radius: 0.5rem;
    box-shadow: $shadow-primary;
    height: 2.875rem;
    cursor: pointer;
    color: $primary-dark-blue;
    padding-left: 1rem;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23000' width='24px' height='24px'><path d='M12 15.5c-.3 0-.5-.1-.7-.3l-5-5c-.4-.4-.4-1 0-1.4s1-.4 1.4 0L12 13.8l4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-5 5c-.2.2-.4.3-.7.3z'/></svg>");
    background-repeat: no-repeat;
    background-position: right 1rem center;
    background-size: 1.125rem 1.125rem;

    &:focus {
      background-color: $primary-very-light-blue;
    }

    @include tablet {
      font-size: 1rem; 
    }

    @include desktop {
      font-size: 1rem; 
      @include block-item(13.9688rem, 3.5625rem);
    }
  }

  &__password-toggle-icon {
    @include block-item(1.5rem, 1.5rem);
    border-radius: 50%;
    display: flex;
    margin-top: -.5rem;
    align-items: center;
    justify-content: center;
    transition: transform 0.1s ease;

    @include desktop {
      margin-top: -.15rem;
    }

    img {
      @include block-item(1rem, 1rem);
    }
  }

  &:active .profile__password-toggle-icon {
    transform: scale(0.9);
  }

  &__location-icon {
    @include block-item(1.25rem, 1.25rem);

    @include desktop {
      margin-top: -.1.25rem;
    }
  }

  &__label {
    position: absolute;
    top: 1rem;
    left: 1rem;
    background: $primary-light-blue;
    border-radius: .35rem;
    padding: 0 0.5rem;
    box-shadow: $shadow-tertiary;
    color: $neutral-light-grey;
    font-size: 1rem;
    transition: all 0.3s ease;
    pointer-events: none;

    @include tablet {
      font-size: 1.125rem; 
    }

    @include desktop {
      font-size: 1.125rem; 
    }
  }

  &__input-group--password {
    display: flex;
    align-items: center;
    position: relative;
  }

  &__password-toggle {
    position: absolute;
    right: .5rem;
    top: 1.1rem;
    display: flex;
    background: none;
    border: none;
    cursor: pointer;
  }

  &__region-input {
    @include block-item(13.9688rem, 3.5625rem);
    display: flex;
    align-items: center;
    gap: 0.5rem;
    font-family: $primary-font;
    font-size: 1rem;
    background: $neutral-white;
    border-radius: 0.5rem;
    box-shadow: $shadow-primary;
    
    cursor: pointer;
    color: $primary-dark-blue;

    &:focus {
      background-color: $primary-very-light-blue;
    }

    option {
      color: $primary-dark-blue;
    }

    @include tablet {
      font-size: 1.125rem; 
    }

    @include desktop {
      font-size: 1.125rem; 
    }
  }

  &__region-title {
    font-family: $primary-font;
    font-size: 1rem;
    color: $primary-medium-blue;
    margin-bottom: 0.5rem;
  }
}

